feat(migration): aplicar migración BD v4.2 completa
- FASE A: eliminar campos deprecados de modelos (tipoPeriodo, observaciones,
  unidadMedida, cantidadProgramada, descripcion, jornadaBaseHoras)
- FASE B: eliminar entidad UbicacionProyecto y todos los DTOs planos/subdirectorios
- FASE C: crear estructura dto/request/*RequestDTO y dto/response/*ResponseDTO
  para los 10 módulos del sistema
- FASE D: reescribir interfaces de servicio con nuevos tipos DTO
- FASE E: reescribir implementaciones de servicio con método toResponse() manual
- FASE F: reescribir controllers con nuevos DTOs; ReporteServiceImpl actualizado
  para reflejar columnas reducidas en reportes de horas y avance de obra

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>