@@ -1,7 +1,7 @@
 package com.example.demo.service.impl;
 
-import com.example.demo.dto.asignacion.AsignacionProyectoContratistaRequest;
-import com.example.demo.dto.asignacion.AsignacionProyectoContratistaResponse;
+import com.example.demo.dto.request.AsignacionProyectoContratistaRequestDTO;
+import com.example.demo.dto.response.AsignacionProyectoContratistaResponseDTO;
 import com.example.demo.model.AsignacionProyectoContratista;
 import com.example.demo.model.Contratista;
 import com.example.demo.model.Proyecto;
@@ -15,6 +15,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,29 +27,25 @@ public class AsignacionProyectoContratistaServiceImpl implements AsignacionProye
     private final ContratistaRepository contratistaRepository;
 
     @Override
-    public List<AsignacionProyectoContratistaResponse> findByProyecto(Integer idProyecto) {
+    public List<AsignacionProyectoContratistaResponseDTO> findByProyecto(Integer idProyecto) {
         return asignacionPcRepository.findByProyecto_IdProyecto(idProyecto)
-                .stream()
-                .map(AsignacionProyectoContratistaResponse::from)
-                .toList();
+                .stream().map(this::toResponse).collect(Collectors.toList());
     }
 
     @Override
-    public List<AsignacionProyectoContratistaResponse> findByContratista(Integer idContratista) {
+    public List<AsignacionProyectoContratistaResponseDTO> findByContratista(Integer idContratista) {
         return asignacionPcRepository.findByContratista_IdContratista(idContratista)
-                .stream()
-                .map(AsignacionProyectoContratistaResponse::from)
-                .toList();
+                .stream().map(this::toResponse).collect(Collectors.toList());
     }
 
     @Override
-    public AsignacionProyectoContratistaResponse findById(Integer id) {
-        return AsignacionProyectoContratistaResponse.from(getOrThrow(id));
+    public AsignacionProyectoContratistaResponseDTO findById(Integer id) {
+        return toResponse(getOrThrow(id));
     }
 
     @Override
     @Transactional
-    public AsignacionProyectoContratistaResponse create(AsignacionProyectoContratistaRequest request) {
+    public AsignacionProyectoContratistaResponseDTO create(AsignacionProyectoContratistaRequestDTO request) {
         Proyecto proyecto = proyectoRepository.findById(request.getIdProyecto())
                 .orElseThrow(() -> new EntityNotFoundException("Proyecto no encontrado con id: " + request.getIdProyecto()));
 
@@ -80,12 +77,12 @@ public class AsignacionProyectoContratistaServiceImpl implements AsignacionProye
                 .observaciones(request.getObservaciones())
                 .build();
 
-        return AsignacionProyectoContratistaResponse.from(asignacionPcRepository.save(asignacion));
+        return toResponse(asignacionPcRepository.save(asignacion));
     }
 
     @Override
     @Transactional
-    public AsignacionProyectoContratistaResponse update(Integer id, AsignacionProyectoContratistaRequest request) {
+    public AsignacionProyectoContratistaResponseDTO update(Integer id, AsignacionProyectoContratistaRequestDTO request) {
         AsignacionProyectoContratista asignacion = getOrThrow(id);
 
         Proyecto proyecto = proyectoRepository.findById(request.getIdProyecto())
@@ -107,12 +104,10 @@ public class AsignacionProyectoContratistaServiceImpl implements AsignacionProye
         asignacion.setFechaFinEstimada(request.getFechaFinEstimada());
         asignacion.setPersonalAsignado(request.getPersonalAsignado());
         asignacion.setPuestosRequeridos(request.getPuestosRequeridos());
-        if (request.getEstatusContrato() != null) {
-            asignacion.setEstatusContrato(request.getEstatusContrato());
-        }
+        if (request.getEstatusContrato() != null) asignacion.setEstatusContrato(request.getEstatusContrato());
         asignacion.setObservaciones(request.getObservaciones());
 
-        return AsignacionProyectoContratistaResponse.from(asignacionPcRepository.save(asignacion));
+        return toResponse(asignacionPcRepository.save(asignacion));
     }
 
     @Override
@@ -124,6 +119,24 @@ public class AsignacionProyectoContratistaServiceImpl implements AsignacionProye
 
     private AsignacionProyectoContratista getOrThrow(Integer id) {
         return asignacionPcRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Asignación proyecto-contratista no encontrada con id: " + id));
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Asignación proyecto-contratista no encontrada con id: " + id));
+    }
+
+    public AsignacionProyectoContratistaResponseDTO toResponse(AsignacionProyectoContratista a) {
+        return AsignacionProyectoContratistaResponseDTO.builder()
+                .idAsignacionPc(a.getIdAsignacionPc())
+                .idProyecto(a.getProyecto().getIdProyecto())
+                .nombreProyecto(a.getProyecto().getNombreProyecto())
+                .idContratista(a.getContratista().getIdContratista())
+                .nombreContratista(a.getContratista().getNombreContratista())
+                .numeroContrato(a.getNumeroContrato())
+                .fechaInicio(a.getFechaInicio())
+                .fechaFinEstimada(a.getFechaFinEstimada())
+                .personalAsignado(a.getPersonalAsignado())
+                .puestosRequeridos(a.getPuestosRequeridos())
+                .estatusContrato(a.getEstatusContrato())
+                .observaciones(a.getObservaciones())
+                .build();
     }
 }
