@@ -1,7 +1,7 @@
 package com.example.demo.service.impl;
 
-import com.example.demo.dto.asignacion.AsignacionTrabajadorProyectoRequest;
-import com.example.demo.dto.asignacion.AsignacionTrabajadorProyectoResponse;
+import com.example.demo.dto.request.AsignacionTrabajadorProyectoRequestDTO;
+import com.example.demo.dto.response.AsignacionTrabajadorProyectoResponseDTO;
 import com.example.demo.model.AsignacionProyectoContratista;
 import com.example.demo.model.AsignacionTrabajadorProyecto;
 import com.example.demo.model.Proyecto;
@@ -17,6 +17,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,29 +30,25 @@ public class AsignacionTrabajadorProyectoServiceImpl implements AsignacionTrabaj
     private final AsignacionProyectoContratistaRepository asignacionPcRepository;
 
     @Override
-    public List<AsignacionTrabajadorProyectoResponse> findByProyecto(Integer idProyecto) {
+    public List<AsignacionTrabajadorProyectoResponseDTO> findByProyecto(Integer idProyecto) {
         return asignacionTpRepository.findByProyecto_IdProyecto(idProyecto)
-                .stream()
-                .map(AsignacionTrabajadorProyectoResponse::from)
-                .toList();
+                .stream().map(this::toResponse).collect(Collectors.toList());
     }
 
     @Override
-    public List<AsignacionTrabajadorProyectoResponse> findByTrabajador(Integer idTrabajador) {
+    public List<AsignacionTrabajadorProyectoResponseDTO> findByTrabajador(Integer idTrabajador) {
         return asignacionTpRepository.findByTrabajador_IdTrabajador(idTrabajador)
-                .stream()
-                .map(AsignacionTrabajadorProyectoResponse::from)
-                .toList();
+                .stream().map(this::toResponse).collect(Collectors.toList());
     }
 
     @Override
-    public AsignacionTrabajadorProyectoResponse findById(Integer id) {
-        return AsignacionTrabajadorProyectoResponse.from(getOrThrow(id));
+    public AsignacionTrabajadorProyectoResponseDTO findById(Integer id) {
+        return toResponse(getOrThrow(id));
     }
 
     @Override
     @Transactional
-    public AsignacionTrabajadorProyectoResponse create(AsignacionTrabajadorProyectoRequest request) {
+    public AsignacionTrabajadorProyectoResponseDTO create(AsignacionTrabajadorProyectoRequestDTO request) {
         Trabajador trabajador = trabajadorRepository.findById(request.getIdTrabajador())
                 .orElseThrow(() -> new EntityNotFoundException(
                         "Trabajador no encontrado con id: " + request.getIdTrabajador()));
@@ -60,8 +57,7 @@ public class AsignacionTrabajadorProyectoServiceImpl implements AsignacionTrabaj
                 .orElseThrow(() -> new EntityNotFoundException(
                         "Proyecto no encontrado con id: " + request.getIdProyecto()));
 
-        AsignacionProyectoContratista asignacionPc = asignacionPcRepository
-                .findById(request.getIdAsignacionPc())
+        AsignacionProyectoContratista asignacionPc = asignacionPcRepository.findById(request.getIdAsignacionPc())
                 .orElseThrow(() -> new EntityNotFoundException(
                         "Asignación proyecto-contratista no encontrada con id: " + request.getIdAsignacionPc()));
 
@@ -83,12 +79,12 @@ public class AsignacionTrabajadorProyectoServiceImpl implements AsignacionTrabaj
                 .observaciones(request.getObservaciones())
                 .build();
 
-        return AsignacionTrabajadorProyectoResponse.from(asignacionTpRepository.save(asignacion));
+        return toResponse(asignacionTpRepository.save(asignacion));
     }
 
     @Override
     @Transactional
-    public AsignacionTrabajadorProyectoResponse update(Integer id, AsignacionTrabajadorProyectoRequest request) {
+    public AsignacionTrabajadorProyectoResponseDTO update(Integer id, AsignacionTrabajadorProyectoRequestDTO request) {
         AsignacionTrabajadorProyecto asignacion = getOrThrow(id);
 
         Trabajador trabajador = trabajadorRepository.findById(request.getIdTrabajador())
@@ -99,8 +95,7 @@ public class AsignacionTrabajadorProyectoServiceImpl implements AsignacionTrabaj
                 .orElseThrow(() -> new EntityNotFoundException(
                         "Proyecto no encontrado con id: " + request.getIdProyecto()));
 
-        AsignacionProyectoContratista asignacionPc = asignacionPcRepository
-                .findById(request.getIdAsignacionPc())
+        AsignacionProyectoContratista asignacionPc = asignacionPcRepository.findById(request.getIdAsignacionPc())
                 .orElseThrow(() -> new EntityNotFoundException(
                         "Asignación proyecto-contratista no encontrada con id: " + request.getIdAsignacionPc()));
 
@@ -110,12 +105,10 @@ public class AsignacionTrabajadorProyectoServiceImpl implements AsignacionTrabaj
         asignacion.setPuestoEnProyecto(request.getPuestoEnProyecto());
         asignacion.setFechaInicio(request.getFechaInicio());
         asignacion.setFechaFinEstimada(request.getFechaFinEstimada());
-        if (request.getEstatusAsignacion() != null) {
-            asignacion.setEstatusAsignacion(request.getEstatusAsignacion());
-        }
+        if (request.getEstatusAsignacion() != null) asignacion.setEstatusAsignacion(request.getEstatusAsignacion());
         asignacion.setObservaciones(request.getObservaciones());
 
-        return AsignacionTrabajadorProyectoResponse.from(asignacionTpRepository.save(asignacion));
+        return toResponse(asignacionTpRepository.save(asignacion));
     }
 
     @Override
@@ -129,5 +122,21 @@ public class AsignacionTrabajadorProyectoServiceImpl implements AsignacionTrabaj
         return asignacionTpRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException(
                         "Asignación trabajador-proyecto no encontrada con id: " + id));
+    }
+
+    AsignacionTrabajadorProyectoResponseDTO toResponse(AsignacionTrabajadorProyecto a) {
+        return AsignacionTrabajadorProyectoResponseDTO.builder()
+                .idAsignacionTp(a.getIdAsignacionTp())
+                .idTrabajador(a.getTrabajador().getIdTrabajador())
+                .nombreTrabajador(a.getTrabajador().getNombreTrabajador())
+                .idProyecto(a.getProyecto().getIdProyecto())
+                .nombreProyecto(a.getProyecto().getNombreProyecto())
+                .idAsignacionPc(a.getAsignacionProyectoContratista().getIdAsignacionPc())
+                .puestoEnProyecto(a.getPuestoEnProyecto())
+                .fechaInicio(a.getFechaInicio())
+                .fechaFinEstimada(a.getFechaFinEstimada())
+                .estatusAsignacion(a.getEstatusAsignacion())
+                .observaciones(a.getObservaciones())
+                .build();
     }
 }
